[gd_scene load_steps=30 format=2]

[ext_resource path="res://actors/player/ActionStateMachine.gd" type="Script" id=1]
[ext_resource path="res://actors/player/Bubble_Girl.gd" type="Script" id=2]
[ext_resource path="res://IS_IDLE.gd" type="Script" id=3]
[ext_resource path="res://assets/main_character_V3/attack_v2/attack_v3.png" type="Texture" id=4]
[ext_resource path="res://assets/main_character_V3/run/v2/bubble_girl_run_with_sat2.png" type="Texture" id=5]
[ext_resource path="res://assets/main_character_V3/run/v2/bubble_girl_run_with_sat1.png" type="Texture" id=6]
[ext_resource path="res://assets/main_character_V3/jump/JUMP5.png" type="Texture" id=7]
[ext_resource path="res://assets/main_character_V3/run/v2/bubble_girl_run_with_sat3.png" type="Texture" id=8]
[ext_resource path="res://assets/main_character_V3/v4/idle_bubble_girl1.png" type="Texture" id=9]
[ext_resource path="res://assets/main_character_V3/attack_v2/attack_v2.png" type="Texture" id=10]
[ext_resource path="res://assets/main_character_V3/v4/idle_bubble_girl2.png" type="Texture" id=11]
[ext_resource path="res://assets/main_character_V3/v4/idle_bubble_girl3.png" type="Texture" id=12]
[ext_resource path="res://assets/main_character/jump/momoka_jump5.png" type="Texture" id=13]
[ext_resource path="res://assets/main_character/jump/momoka_jump6.png" type="Texture" id=14]
[ext_resource path="res://assets/main_character/jump/momoka_jump4.png" type="Texture" id=15]
[ext_resource path="res://assets/main_character_V3/jump/JUMP1.png" type="Texture" id=16]
[ext_resource path="res://assets/main_character_V3/jump/JUMP3.png" type="Texture" id=17]
[ext_resource path="res://pixel_smoother.tres" type="Material" id=18]
[ext_resource path="res://IS_RUNNING.gd" type="Script" id=19]
[ext_resource path="res://StateMachine.gd" type="Script" id=20]
[ext_resource path="res://IS_JUMPING.gd" type="Script" id=21]
[ext_resource path="res://assets/main_character_V3/jump/JUMP4.png" type="Texture" id=22]
[ext_resource path="res://assets/main_character/jump/momoka_jump3.png" type="Texture" id=23]
[ext_resource path="res://assets/main_character_V3/run/v2/bubble_girl_run_with_sat4.png" type="Texture" id=24]
[ext_resource path="res://actors/player/IS_DAMAGED.gd" type="Script" id=25]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 4 ), ExtResource( 4 ) ],
"loop": false,
"name": "attack",
"speed": 8.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 11 ), ExtResource( 12 ) ],
"loop": true,
"name": "idle",
"speed": 3.0
}, {
"frames": [ ExtResource( 23 ), ExtResource( 15 ), ExtResource( 13 ), ExtResource( 14 ) ],
"loop": true,
"name": "in_air",
"speed": 5.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 17 ), ExtResource( 22 ), ExtResource( 7 ) ],
"loop": false,
"name": "jumping",
"speed": 9.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 5 ), ExtResource( 8 ), ExtResource( 24 ) ],
"loop": true,
"name": "running",
"speed": 12.0
} ]

[sub_resource type="CapsuleShape2D" id=10]
radius = 4.0
height = 12.0

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 5, 1 )

[sub_resource type="CapsuleShape2D" id=13]
radius = 2.0
height = 16.0

[node name="Bubble_Girl" type="KinematicBody2D"]
collision_mask = 16777222
collision/safe_margin = 0.01
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [  ]
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = ExtResource( 18 )
frames = SubResource( 1 )
animation = "attack"

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 20 )

[node name="IS_IDLE" type="Node" parent="StateMachine"]
script = ExtResource( 3 )

[node name="IS_RUNNING" type="Node" parent="StateMachine"]
script = ExtResource( 19 )

[node name="IS_JUMPING" type="Node" parent="StateMachine"]
script = ExtResource( 21 )

[node name="IS_DAMAGED" type="Node" parent="StateMachine"]
script = ExtResource( 25 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1 )
shape = SubResource( 10 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
visible = false
margin_left = 159.0
margin_top = 52.0
margin_right = 199.0
margin_bottom = 92.0

[node name="ActionStateMachine" type="Node" parent="."]
script = ExtResource( 1 )

[node name="HurtEnemy" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 16777220

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtEnemy"]
position = Vector2( 0, 12 )
shape = SubResource( 11 )

[node name="InvincibleTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="TakeDamageRight" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 33554432

[node name="CollisionShape2D" type="CollisionShape2D" parent="TakeDamageRight"]
position = Vector2( 3, 1 )
shape = SubResource( 13 )

[node name="TakeDamageLeft" type="Area2D" parent="."]
position = Vector2( 1, 0 )
collision_layer = 8
collision_mask = 33554432

[node name="CollisionShape2D" type="CollisionShape2D" parent="TakeDamageLeft"]
position = Vector2( -4, 1 )
shape = SubResource( 13 )

[connection signal="area_entered" from="HurtEnemy" to="StateMachine/IS_JUMPING" method="_on_HurtEnemy_area_entered"]
[connection signal="timeout" from="InvincibleTimer" to="StateMachine" method="_on_InvincibleTimer_timeout"]
[connection signal="timeout" from="InvincibleTimer" to="StateMachine/IS_JUMPING" method="_on_InvincibleTimer_timeout"]
[connection signal="timeout" from="InvincibleTimer" to="StateMachine/IS_DAMAGED" method="_on_InvincibleTimer_timeout"]
[connection signal="area_entered" from="TakeDamageRight" to="." method="_on_TakeDamageRight_area_entered"]
[connection signal="area_entered" from="TakeDamageRight" to="StateMachine/IS_DAMAGED" method="_on_TakeDamageRight_area_entered"]
[connection signal="area_entered" from="TakeDamageLeft" to="." method="_on_TakeDamageLeft_area_entered"]
[connection signal="area_entered" from="TakeDamageLeft" to="StateMachine/IS_DAMAGED" method="_on_TakeDamageLeft_area_entered"]
